--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RPG - Dragon Repeller</title>
   </head>
   <body>
+        <h1 align="center" style="color:white">Role playing Game</h1>
     <div id="game">
       <div id="stats">
         <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
